Fix bug #15227
Ensures the upload of file for WebSites is done into the component
repository. (The WebSites component has to be installed; it's not
installed by default.)

Protects the synchronizer token generation and publishing by using
volatile security tokens.